POSITION_INDEPENDENT_CODE for libh2o/libh2o-evloop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -473,6 +473,8 @@ ELSE ()
     ADD_LIBRARY(libh2o ${LIB_SOURCE_FILES})
     ADD_LIBRARY(libh2o-evloop ${LIB_SOURCE_FILES})
 ENDIF (WSLAY_FOUND)
+set_property(TARGET libh2o PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET libh2o-evloop PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 SET_TARGET_PROPERTIES(libh2o PROPERTIES
     OUTPUT_NAME h2o
