my guess pkg_check_modules behaves unexpected on macOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,7 +194,9 @@ IF (DISABLE_LIBUV)
 ENDIF(DISABLE_LIBUV)
 
 IF (PKG_CONFIG_FOUND)
-    PKG_CHECK_MODULES(WSLAY libwslay)
+    IF (NOT CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+        PKG_CHECK_MODULES(WSLAY libwslay)
+    ENDIF ()
     IF (WSLAY_FOUND)
         INCLUDE_DIRECTORIES(${WSLAY_INCLUDE_DIRS})
         LINK_DIRECTORIES(${WSLAY_LIBRARY_DIRS})
