wslay as a submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,22 +140,9 @@ IF (DISABLE_LIBUV)
     SET(LIBUV_FOUND FALSE)
 ENDIF(DISABLE_LIBUV)
 
-IF (PKG_CONFIG_FOUND)
-    PKG_CHECK_MODULES(WSLAY libwslay)
-    IF (WSLAY_FOUND)
-        INCLUDE_DIRECTORIES(${WSLAY_INCLUDE_DIRS})
-        LINK_DIRECTORIES(${WSLAY_LIBRARY_DIRS})
-    ENDIF (WSLAY_FOUND)
-ENDIF (PKG_CONFIG_FOUND)
-IF (NOT WSLAY_FOUND)
-    FIND_PACKAGE(Wslay)
-    IF (WSLAY_FOUND)
-        INCLUDE_DIRECTORIES(${WSLAY_INCLUDE_DIR})
-    ENDIF (WSLAY_FOUND)
-ENDIF (NOT WSLAY_FOUND)
-IF (NOT WSLAY_FOUND)
-    SET(WSLAY_LIBRARIES -lwslay)
-ENDIF (NOT WSLAY_FOUND)
+add_subdirectory(wslay)
+SET(WSLAY_FOUND TRUE)
+SET(WSLAY_LIBRARIES wslay)
 
 IF (ZLIB_FOUND)
     INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
@@ -376,7 +363,9 @@ ENDIF (ZLIB_FOUND)
 
 IF (WSLAY_FOUND)
     ADD_LIBRARY(libh2o lib/websocket.c ${LIB_SOURCE_FILES})
+    target_link_libraries(libh2o wslay)
     ADD_LIBRARY(libh2o-evloop lib/websocket.c ${LIB_SOURCE_FILES})
+    target_link_libraries(libh2o-evloop wslay)
 ELSE ()
     ADD_LIBRARY(libh2o ${LIB_SOURCE_FILES})
     ADD_LIBRARY(libh2o-evloop ${LIB_SOURCE_FILES})
