--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "misc/cache-digest.js"]
 	path = misc/cache-digest.js
 	url = https://github.com/h2o/cache-digest.js.git
+[submodule "wslay"]
+	path = wslay
+	url = https://github.com/tatsuhiro-t/wslay.git
