wslay is now submodule of parent project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,9 +140,28 @@ IF (DISABLE_LIBUV)
     SET(LIBUV_FOUND FALSE)
 ENDIF(DISABLE_LIBUV)
 
-add_subdirectory(wslay)
-SET(WSLAY_FOUND TRUE)
-SET(WSLAY_LIBRARIES wslay)
+# USE_STATIC_WSLAY can be defined by "parent" project when h2o is submodule
+IF (USE_STATIC_WSLAY)
+    SET(WSLAY_FOUND TRUE)
+    SET(WSLAY_LIBRARIES wslay)
+ELSE ()
+    IF (PKG_CONFIG_FOUND)
+        PKG_CHECK_MODULES(WSLAY libwslay)
+        IF (WSLAY_FOUND)
+            INCLUDE_DIRECTORIES(${WSLAY_INCLUDE_DIRS})
+            LINK_DIRECTORIES(${WSLAY_LIBRARY_DIRS})
+        ENDIF (WSLAY_FOUND)
+    ENDIF (PKG_CONFIG_FOUND)
+    IF (NOT WSLAY_FOUND)
+        FIND_PACKAGE(Wslay)
+        IF (WSLAY_FOUND)
+            INCLUDE_DIRECTORIES(${WSLAY_INCLUDE_DIR})
+        ENDIF (WSLAY_FOUND)
+    ENDIF (NOT WSLAY_FOUND)
+    IF (NOT WSLAY_FOUND)
+        SET(WSLAY_LIBRARIES wslay)
+    ENDIF (NOT WSLAY_FOUND)
+ENDIF (USE_STATIC_WSLAY)
 
 IF (ZLIB_FOUND)
     INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
@@ -363,9 +382,7 @@ ENDIF (ZLIB_FOUND)
 
 IF (WSLAY_FOUND)
     ADD_LIBRARY(libh2o lib/websocket.c ${LIB_SOURCE_FILES})
-    target_link_libraries(libh2o wslay)
     ADD_LIBRARY(libh2o-evloop lib/websocket.c ${LIB_SOURCE_FILES})
-    target_link_libraries(libh2o-evloop wslay)
 ELSE ()
     ADD_LIBRARY(libh2o ${LIB_SOURCE_FILES})
     ADD_LIBRARY(libh2o-evloop ${LIB_SOURCE_FILES})
