fix wslay headers when we are submodule of parent project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,7 @@ ENDIF(DISABLE_LIBUV)
 # USE_STATIC_WSLAY can be defined by "parent" project when h2o is submodule
 IF (USE_STATIC_WSLAY)
     SET(WSLAY_FOUND TRUE)
+    INCLUDE_DIRECTORIES(${WSLAY_INCLUDE_DIRS})
     SET(WSLAY_LIBRARIES wslay)
 ELSE ()
     IF (PKG_CONFIG_FOUND)
